--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,10 @@
 <resources>
     <string name="app_name">VkRecipes</string>
     <string name="action_settings">Settings</string>
-    <string name="home">Домашняя страница</string>
-    <string name="favourite">Закладки</string>
-
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cook_good">Cook Good</string>
+    <string name="fitness_recipe">Фитнес рецепты</string>
+    <string name="health_food">Здоровое питание</string>
+    <string name="best_recipe">Лучшие рецепты</string>
+    <string name="useful_recipe">Полезные рецепты</string>
+    <string name="bookmark">Закладки</string>
 </resources>
