--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">VkRecipes</string>
     <string name="action_settings">Settings</string>
     <string name="cook_good">Cook Good</string>
@@ -8,6 +9,7 @@
     <string name="best_recipe">Лучшие рецепты</string>
     <string name="useful_recipe">Полезные рецепты</string>
     <string name="bookmark">Закладки</string>
+    <string name="recipes_from_instagram">Рецепты из инстаграм</string>
     <string-array name="bookmark">
         <item>Первые блюда</item>
         <item>Вторые блюда</item>
@@ -17,6 +19,10 @@
         <item>Другое</item>
     </string-array>
     <string name="change_bookmark">Выберите закладку</string>
+    <string name="button_cancel">Отмена</string>
+    <string name="button_add_bookmrk">Добавить закладку</string>
+    <string name="name_new_bookmark">Название новой закладки</string>
+    <string name="button_add_name_bookmark">Добавить закладки</string>
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
