--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,9 @@
     <string name="button_add_bookmrk">Добавить закладку</string>
     <string name="name_new_bookmark">Название новой закладки</string>
     <string name="button_add_name_bookmark">Добавить закладки</string>
-
+    <string name="save_image">Сохранить изображение</string>
+    <string name="copy_link">Копировать ссыылку</string>
+    <string name="send_link_on_image">Поделиться ссылкой</string>
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
