--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,6 @@
         <item>Полезные рецепты</item>
         <item>Закладки</item>
     </string-array>
-
     <integer-array name="array_drawer_item_id">
         <item>-39009769</item>
         <item>-80410546</item>
@@ -33,13 +32,13 @@
         <item>1</item>
     </integer-array>
     <string name="change_bookmark">Выберите закладку</string>
-    <string name="write_new_bookmark">Введите название</string>
+    <string name="write_new_bookmark">Введите название закладки</string>
     <string name="button_cancel">Отмена</string>
     <string name="button_add_bookmrk">Добавить закладку</string>
     <string name="name_new_bookmark">Название новой закладки</string>
     <string name="name_edit_bookmark">Новое название закладки</string>
     <string name="button_add_name_of_bookmark">Добавить закладку</string>
-    <string name="button_edit_name_of_bookmark">Изменить название закладки</string>
+    <string name="button_edit_name_of_bookmark">Изменить название</string>
     <string name="save_image">Сохранить изображение</string>
     <string name="copy_link">Копировать ссылку</string>
     <string name="send_link_on_image">Поделиться ссылкой</string>
