--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,13 @@
     <string name="action_settings">Settings</string>
     <string name="label_name">Recipes</string>
     <string name="cook_good">Cook Good</string>
+    <string name="recipes">Рецепты</string>
     <string name="fitness_recipe">Фитнес рецепты</string>
     <string name="health_food">Здоровое питание</string>
     <string name="best_recipe">Лучшие рецепты</string>
     <string name="useful_recipe">Полезные рецепты</string>
+    <string name="lose_weight_delicious">Худей вкусно</string>
+    <string name="diet_recipes">Диетические рецепты</string>
     <string name="bookmark">Закладки</string>
     <string name="cook_good_id">-39009769</string>
     <string name="fitness_recipe_id">-80410546</string>
@@ -17,18 +20,24 @@
     <string name="bookmark_id">1</string>
     <string-array name="array_drawer_item_name">
         <item>Cook Good</item>
+        <item>Рецепты</item>
         <item>Фитнес рецепты</item>
         <item>Здоровое питание</item>
         <item>Лучшие рецепты</item>
         <item>Полезные рецепты</item>
+        <item>Худей вкусно</item>
+        <item>Диетические рецепты</item>
         <item>Закладки</item>
     </string-array>
     <integer-array name="array_drawer_item_id">
         <item>-39009769</item>
+        <item>-34451036</item>
         <item>-80410546</item>
         <item>-77109534</item>
         <item>-32194285</item>
         <item>-76882174</item>
+        <item>-35113021</item>
+        <item>-34889014</item>
         <item>1</item>
     </integer-array>
     <string name="change_bookmark">Выберите закладку</string>
